2002-04-17  Peter Stephenson  <pws@csr.com>

	* Alexandre Duret-Lutz: 16930: Src/cond.c, Test/C02cond.ztst:
	Careful with long filenames in internal condition test; fix block
	file test for `-f'.

2002-04-17  Sven Wischnowsky  <wischnow@zsh.org>

	* 16998: Src/Zle/computil.c: make compvalues unquote the string
	from the line like comparguments does

2002-04-16  Felix Rosencrantz <f_rosencrantz@yahoo.com>

	* 16956: Completion/Unix/Command/_java: Changed to use
	new _java_class function.

2002-04-16  Sven Wischnowsky  <wischnow@zsh.org>

	* users/4836: Completion/Unix/Type/_path_files: make
	_path_files use match specs from the matcher style when calling
	compfiles

	* 16991: Completion/Base/Utility/_values: make _values not use
	-Q

	* 16990: Src/Zle/zle_tricky.c: treat backslashed bangs in
	double quotes specially in get_comp_string(), they are more
	like $s there

	* 16988: Completion/Base/Utility/_store_cache,
	Completion/Debian/Type/_deb_packages,
	Completion/Redhat/Command/_rpm, Completion/Unix/Command/_cvs,
	Completion/Unix/Command/_gs, Completion/Unix/Command/_java,
	Completion/Unix/Command/_look,
	Completion/Unix/Command/_mysql_utils,
	Completion/Unix/Command/_nslookup, Completion/Unix/Command/_pbm,
	Completion/Unix/Command/_perl, Completion/Unix/Command/_rsync,
	Completion/Unix/Command/_samba, Completion/Unix/Command/_ssh,
	Completion/Unix/Command/_tiff, Completion/Unix/Command/_whois,
	Completion/Unix/Command/_yp, Completion/Unix/Type/_perl_modules,
	Completion/Unix/Type/_urls, Completion/X/Command/_x_utils,
	Completion/X/Command/_xauth, Completion/X/Command/_xmodmap,
	Completion/X/Command/_xwit, Completion/X/Type/_x_borderwidth,
	Completion/X/Type/_x_geometry, Completion/X/Type/_x_locale,
	Completion/X/Type/_x_name, Completion/X/Type/_x_resource,
	Completion/X/Type/_x_selection_timeout,
	Completion/X/Type/_x_title, Completion/X/Type/_xt_session_id,
	Completion/Zsh/Command/_compdef, Completion/Zsh/Command/_limit,