@@ -1,3 +1,8 @@
+2002-04-18  Peter Stephenson  <pws@csr.com>
+
+	* 17011: Src/Modules/tcp.c, Src/Modules/zftp.c: restore
+	freehostent() incorrectly removed in 16172.
+
 2002-04-17  Peter Stephenson  <pws@csr.com>
 
 	* Alexandre Duret-Lutz: 16930: Src/cond.c, Test/C02cond.ztst:
